--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -5,6 +5,8 @@ on:
     branches: [$default-branch]
   pull_request:
     branches: [$default-branch]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   deploy:
@@ -28,5 +30,6 @@ jobs:
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
           verbose: true
