--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -22,7 +22,7 @@ jobs:
         run: python3 -m pip install --upgrade pip
 
       - name: Install the package
-        run: python3 -m pip install .
+        run: python3 -m pip install .[dev]
 
       - name: Test with pytest
         run: python3 -m pytest --cov=python/zzz233 --cov-report=xml tests/
