--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -1,5 +1,5 @@
 # Sample workflow for building and deploying a mkdocs site to GitHub Pages
-name: Deploy mkdocs to Pages
+name: mkdocs-github-page
 
 
 on:
